--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Activity Tracker</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
     </header>
     <div class="grid">
       <div class="grid-column1">
-        <section class="data-section hydration grid-item draggable" tabindex="1">
+        <section class="data-section hydration grid-item draggable" tabindex="0">
           <h2 class="data-heading">Hydration</h2>
           <section class="data-subsection">
             <img class="img-medium" src="../images/drop.svg" alt="water droplet">
@@ -29,7 +29,7 @@
               alt="A bar chart that displays the number of ounces of water the user consumed daily, over the course of a week."></canvas>
           </section>
         </section>
-        <section class="data-section challenges grid-item draggable" tabindex="5">
+        <section class="data-section challenges grid-item draggable" tabindex="0">
           <h2 class="data-heading">Challenges</h2>
           <section>
             <h3 class="streak-heading">3 Day Step Streak</h3>
@@ -40,13 +40,13 @@
             <p class="increasing-stairs"></p>
           </section>
         </section>
-        <section class="data-section friends grid-item draggable" tabindex="4">
+        <section class="data-section friends grid-item draggable" tabindex="0">
           <h2 class="data-heading">Friends</h2>
           <section class="friends-step"></section>
         </section>
       </div>
       <div class="grid-column2">
-        <section class="data-section sleep grid-item draggable" tabindex="2">
+        <section class="data-section sleep grid-item draggable" tabindex="0">
           <h2 class="data-heading">Sleep</h2>
           <section class="data-subsection">
             <img class="img-medium" src="../images/moon.svg" alt="moon with stars">
@@ -66,7 +66,7 @@
         </section>
       </div>
       <div class="grid-column3">
-        <section class="data-section activity grid-item draggable" tabindex="3">
+        <section class="data-section activity grid-item draggable" tabindex="0">
           <h2 class="data-heading">Activity</h2>
           <section class="data-subsection user-step-goal"></section>
           <section class="data-subsection average-step-goal"></section>
