--- a/src/index.html
+++ b/src/index.html
@@ -12,15 +12,18 @@
       <h1 class="fitlit-logo">FitLit</h1>
       <div class="name-date-wrapper">
       <h2 class="date"></h2>
-      <h2 class="welcome-message">Welcome<span class="username italic-name"></span></h2>
+      <h2 class="welcome-message">Welcome<span class="username italic-name">
+        </span></h2>
       </div>
     </header>
     <div class="grid">
       <div class="grid-column1">
-        <section class="data-section hydration grid-item draggable" tabindex="0">
+        <section class="data-section hydration grid-item draggable"
+          tabindex="0">
           <h2 class="data-heading">Hydration</h2>
           <section class="data-subsection">
-            <img class="img-medium" src="../images/drop.svg" alt="water droplet">
+            <img class="img-medium" src="../images/drop.svg"
+              alt="water droplet">
             <h3 class="subtext">TODAY</h3>
             <p class="data-text water-consumed"></p>
           </section>
@@ -29,7 +32,8 @@
               alt="A bar chart that displays the number of ounces of water the user consumed daily, over the course of a week."></canvas>
           </section>
         </section>
-        <section class="data-section challenges grid-item draggable" tabindex="0">
+        <section class="data-section challenges grid-item draggable"
+          tabindex="0">
           <h2 class="data-heading">Challenges</h2>
           <section>
             <h3 class="streak-heading">3 Day Step Streak</h3>
@@ -49,7 +53,8 @@
         <section class="data-section sleep grid-item draggable" tabindex="0">
           <h2 class="data-heading">Sleep</h2>
           <section class="data-subsection">
-            <img class="img-medium" src="../images/moon.svg" alt="moon with stars">
+            <img class="img-medium" src="../images/moon.svg"
+              alt="moon with stars">
             <h3 class="subtext">LAST NIGHT</h3>
             <p class="data-text hours-slept-day"></p>
             <p class="data-text quality-sleep-day"></p>
@@ -59,52 +64,78 @@
               alt="A line chart that displays the number of hours slept each day of the week and the quality of sleep each night."></canvas>
           </section>
           <section class="data-subsection">
-            <img class="img-medium" src="../images/trophy.svg" alt="trophy for a winner">
-            <h3 class="subtext secondary-heading">USER WITH MOST SLEEP THIS WEEK</h3>
+            <img class="img-medium" src="../images/trophy.svg"
+              alt="trophy for a winner">
+            <h3 class="subtext secondary-heading">USER WITH MOST SLEEP THIS WEEK
+            </h3>
             <p class="data-text longest-sleeper"></p>
           </section>
         </section>
-        <section class="data-section post-section grid-item draggable" tabindex="0">
+        <section class="data-section post-section grid-item draggable"
+          tabindex="0">
           <h2 class="data-heading">Submit Stats</h2>
           <div class="post__btn--container">
-            <button class="show__hydration--btn" type="button" name="button">Post Hydration Stats</button>
-            <button class="show__activity--btn" type="button" name="button">Post Activity Stats</button>
-            <button class="show__sleep--btn" type="button" name="button">Post Sleep Stats</button>
+            <button class="show__hydration--btn" type="button" name="button">
+              Post Hydration Stats</button>
+            <button class="show__activity--btn" type="button" name="button">
+              Post Activity Stats</button>
+            <button class="show__sleep--btn" type="button" name="button">
+              Post Sleep Stats</button>
           </div>
           <section class="data-subsection post-section">
             <h3 class="subtext">Input your stats</h3>
             <form class="sleep-form" action="index.html" method="post">
               <div class="input-container">
                 <label class="form-label" for="hours-slept">Hours Slept</label>
-                <input class="hours-slept" name="hours-slept" id="hours-slept" type="number" step="any" min="0" name="hours-slept" placeholder="Enter Numerical Data" required>
+                <input class="hours-slept" name="hours-slept" id="hours-slept"
+                  type="number" step="any" min="0" name="hours-slept"
+                  placeholder="Enter Numerical Data" required>
               </div>
               <div class="input-container">
-                <label class="form-label" for="sleep-quality">Sleep Quality</label>
-                <input class="sleep-quality" id="sleep-quality" type="number" step="any" min="0" name="sleep-quality" placeholder="Enter Numerical Data" required>
+                <label class="form-label" for="sleep-quality">Sleep Quality
+                </label>
+                <input class="sleep-quality" id="sleep-quality" type="number"
+                  step="any" min="0" name="sleep-quality"
+                  placeholder="Enter Numerical Data" required>
               </div>
-              <button class="sleep__submit--btn" type="submit">Submit Data</button>
+              <button class="sleep__submit--btn" type="submit">Submit Data
+              </button>
             </form>
             <form class="hydration-form" action="index.html" method="post">
               <div class="input-container">
-                <label class="form-label" for="number-of-ounces">Ounces Drank</label>
-                <input class="num-ounces" id="number-of-ounces" type="number" step="any" min="0" name="num-ounces" placeholder="Enter Numerical Data" required>
+                <label class="form-label" for="number-of-ounces">Ounces Drank
+                </label>
+                <input class="num-ounces" id="number-of-ounces" type="number"
+                  step="any" min="0" name="num-ounces"
+                  placeholder="Enter Numerical Data" required>
               </div>
-              <button class="hydration__submit--btn" type="submit">Submit Data</button>
+              <button class="hydration__submit--btn" type="submit">Submit Data
+              </button>
             </form>
             <form class="activity-form" action="index.html" method="post">
               <div class="input-container">
-                <label class="form-label" for="number-of-steps">Number of Steps</label>
-                <input class="num-steps" id="number-of-steps" type="number" step="any" min="0" name="num-steps" placeholder="Enter Numerical Data" required>
+                <label class="form-label" for="number-of-steps">Number of Steps
+                </label>
+                <input class="num-steps" id="number-of-steps" type="number"
+                  step="any" min="0" name="num-steps"
+                  placeholder="Enter Numerical Data" required>
               </div>
               <div class="input-container">
-                <label class="form-label" for="minutes-active">Minutes Active</label>
-                <input class="minutes-active" id="minutes-active" type="number" step="any" min="0" name="minutes-active" placeholder="Enter Numerical Data" required>
+                <label class="form-label" for="minutes-active">Minutes Active
+                </label>
+                <input class="minutes-active" id="minutes-active" type="number"
+                  step="any" min="0" name="minutes-active"
+                  placeholder="Enter Numerical Data" required>
               </div>
               <div class="input-container">
-                <label class="form-label" for="flights-of-stairs">Flights of Stairs</label>
-                <input class="flights-stairs" id="flights-of-stairs" type="number" step="any" min="0" name="flights-stairs" placeholder="Enter Numerical Data" required>
+                <label class="form-label" for="flights-of-stairs">
+                  Flights of Stairs</label>
+                <input class="flights-stairs" id="flights-of-stairs"
+                  type="number" step="any" min="0" name="flights-stairs"
+                  placeholder="Enter Numerical Data" required>
               </div>
-              <button class="activity__submit--btn" type="submit">Submit Data</button>
+              <button class="activity__submit--btn" type="submit">Submit Data
+              </button>
             </form>
           </section>
         </section>
@@ -135,7 +166,8 @@
             </div>
           </section>
           <section class="data-subsection distance-comparison">
-            <img class="img-medium"   src="../images/footsteps-silhouette-variant.svg" alt="road">
+            <img class="img-medium"
+              src="../images/footsteps-silhouette-variant.svg" alt="road">
             <h3 class="subtext">TODAY</h3>
             <div class="separator">
               <div class="user">
@@ -184,14 +216,17 @@
             <p class="data-text week-review-stairs"></p>
           </section>
           <section class="data-subsection">
-            <img class="img-medium" src="../images/trophy.svg" alt="trophy for a winner">
+            <img class="img-medium" src="../images/trophy.svg"
+              alt="trophy for a winner">
             <h3 class="subtext secondary-heading">MOST ACTIVE USER</h3>
             <p class="data-text most-active"></p>
           </section>
         </section>
       </div>
     </div>
-    <script src="https://unpkg.com/packery@2.1/dist/packery.pkgd.min.js"></script>
-    <script src="https://unpkg.com/draggabilly@2/dist/draggabilly.pkgd.min.js"></script>
+    <script src="https://unpkg.com/packery@2.1/dist/packery.pkgd.min.js">
+    </script>
+    <script src="https://unpkg.com/draggabilly@2/dist/draggabilly.pkgd.min.js">
+    </script>
   </body>
 </html>
